--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 16;
   color: #000;
   line-height: 1.5;
 }
